// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TimePicker renders disabled time-picker correctly 1`] = `
<div>
  <div
    class="za-select za-time__select-wrapper disabled radius"
  >
    <div
      class="ui-dropdown-trigger-box"
    >
      <div
        aria-autocomplete="list"
        aria-expanded="false"
        aria-haspopup="true"
        class="za-select__selection"
        role="combobox"
      >
        <span
          class="za-select__text za-select__text-placeholder"
        >
          00:00:00
        </span>
        <i
          class="za-icon za-icon-time-circle theme-default za-time__select-icon"
        />
      </div>
    </div>
    <div
      class="ui-dropdown"
      style="min-width:0;width:240px;left:0;top:0;position:absolute;animation-duration:300ms;display:none;overflow:hidden;z-index:2020"
    >
      <div
        class="za-time__select"
      >
        <span
          class="za-select"
        >
          <span
            aria-autocomplete="list"
            aria-expanded="false"
            aria-haspopup="true"
            class="za-select__selection"
            role="combobox"
            style="height:100%;max-height:250px;overflow:auto"
          >
            <ul
              class="ui-menu ui-menu-light ui-menu-inline"
              role="menu"
            />
          </span>
        </span>
        <span
          class="za-select"
        >
          <span
            aria-autocomplete="list"
            aria-expanded="false"
            aria-haspopup="true"
            class="za-select__selection"
            role="combobox"
            style="height:100%;max-height:250px;overflow:auto"
          >
            <ul
              class="ui-menu ui-menu-light ui-menu-inline"
              role="menu"
            />
          </span>
        </span>
        <span
          class="za-select"
        >
          <span
            aria-autocomplete="list"
            aria-expanded="false"
            aria-haspopup="true"
            class="za-select__selection"
            role="combobox"
            style="height:100%;max-height:250px;overflow:auto"
          >
            <ul
              class="ui-menu ui-menu-light ui-menu-inline"
              role="menu"
            />
          </span>
        </span>
      </div>
      <div
        class="za-select__bottom"
      >
        <a
          class="clear-btn"
          href="javascript:;"
        >
          清除
        </a>
        <a
          class="confirm-btn"
          href="javascript:;"
        >
          确认
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`TimePicker renders disabled time-select correctly 1`] = `
<div
  class="za-time__select"
>
  <span
    class="za-select"
  >
    <span
      aria-autocomplete="list"
      aria-expanded="false"
      aria-haspopup="true"
      class="za-select__selection"
      role="combobox"
      style="height:100%;max-height:250px;overflow:auto"
    >
      <ul
        class="ui-menu ui-menu-light ui-menu-inline"
        role="menu"
      />
    </span>
  </span>
  <span
    class="za-select"
  >
    <span
      aria-autocomplete="list"
      aria-expanded="false"
      aria-haspopup="true"
      class="za-select__selection"
      role="combobox"
      style="height:100%;max-height:250px;overflow:auto"
    >
      <ul
        class="ui-menu ui-menu-light ui-menu-inline"
        role="menu"
      />
    </span>
  </span>
  <span
    class="za-select"
  >
    <span
      aria-autocomplete="list"
      aria-expanded="false"
      aria-haspopup="true"
      class="za-select__selection"
      role="combobox"
      style="height:100%;max-height:250px;overflow:auto"
    >
      <ul
        class="ui-menu ui-menu-light ui-menu-inline"
        role="menu"
      />
    </span>
  </span>
</div>
`;

exports[`TimePicker renders isRadius time-picker correctly 1`] = `
<div>
  <div
    class="za-select za-time__select-wrapper radius"
    style="width:160px"
  >
    <div
      class="ui-dropdown-trigger-box"
    >
      <div
        aria-autocomplete="list"
        aria-expanded="false"
        aria-haspopup="true"
        class="za-select__selection"
        role="combobox"
      >
        <span
          class="za-select__text za-select__text-placeholder"
        >
          00:00:00
        </span>
        <i
          class="za-icon za-icon-time-circle theme-default za-time__select-icon"
        />
      </div>
    </div>
    <div
      class="ui-dropdown"
      style="min-width:0;width:240px;left:0;top:0;position:absolute;animation-duration:300ms;display:none;overflow:hidden;z-index:2020"
    >
      <div
        class="za-time__select"
      >
        <span
          class="za-select"
        >
          <span
            aria-autocomplete="list"
            aria-expanded="false"
            aria-haspopup="true"
            class="za-select__selection"
            role="combobox"
            style="height:100%;max-height:250px;overflow:auto"
          >
            <ul
              class="ui-menu ui-menu-light ui-menu-inline"
              role="menu"
            />
          </span>
        </span>
        <span
          class="za-select"
        >
          <span
            aria-autocomplete="list"
            aria-expanded="false"
            aria-haspopup="true"
            class="za-select__selection"
            role="combobox"
            style="height:100%;max-height:250px;overflow:auto"
          >
            <ul
              class="ui-menu ui-menu-light ui-menu-inline"
              role="menu"
            />
          </span>
        </span>
        <span
          class="za-select"
        >
          <span
            aria-autocomplete="list"
            aria-expanded="false"
            aria-haspopup="true"
            class="za-select__selection"
            role="combobox"
            style="height:100%;max-height:250px;overflow:auto"
          >
            <ul
              class="ui-menu ui-menu-light ui-menu-inline"
              role="menu"
            />
          </span>
        </span>
      </div>
      <div
        class="za-select__bottom"
      >
        <a
          class="clear-btn"
          href="javascript:;"
        >
          清除
        </a>
        <a
          class="confirm-btn"
          href="javascript:;"
        >
          确认
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`TimePicker renders normal time-picker correctly 1`] = `
<div>
  <div
    class="za-select za-time__select-wrapper radius"
  >
    <div
      class="ui-dropdown-trigger-box"
    >
      <div
        aria-autocomplete="list"
        aria-expanded="false"
        aria-haspopup="true"
        class="za-select__selection"
        role="combobox"
      >
        <span
          class="za-select__text za-select__text-placeholder"
        >
          00:00:00
        </span>
        <i
          class="za-icon za-icon-time-circle theme-default za-time__select-icon"
        />
      </div>
    </div>
    <div
      class="ui-dropdown"
      style="min-width:0;width:240px;left:0;top:0;position:absolute;animation-duration:300ms;display:none;overflow:hidden;z-index:2020"
    >
      <div
        class="za-time__select"
      >
        <span
          class="za-select"
        >
          <span
            aria-autocomplete="list"
            aria-expanded="false"
            aria-haspopup="true"
            class="za-select__selection"
            role="combobox"
            style="height:100%;max-height:250px;overflow:auto"
          >
            <ul
              class="ui-menu ui-menu-light ui-menu-inline"
              role="menu"
            />
          </span>
        </span>
        <span
          class="za-select"
        >
          <span
            aria-autocomplete="list"
            aria-expanded="false"
            aria-haspopup="true"
            class="za-select__selection"
            role="combobox"
            style="height:100%;max-height:250px;overflow:auto"
          >
            <ul
              class="ui-menu ui-menu-light ui-menu-inline"
              role="menu"
            />
          </span>
        </span>
        <span
          class="za-select"
        >
          <span
            aria-autocomplete="list"
            aria-expanded="false"
            aria-haspopup="true"
            class="za-select__selection"
            role="combobox"
            style="height:100%;max-height:250px;overflow:auto"
          >
            <ul
              class="ui-menu ui-menu-light ui-menu-inline"
              role="menu"
            />
          </span>
        </span>
      </div>
      <div
        class="za-select__bottom"
      >
        <a
          class="clear-btn"
          href="javascript:;"
        >
          清除
        </a>
        <a
          class="confirm-btn"
          href="javascript:;"
        >
          确认
        </a>
      </div>
    </div>
  </div>
</div>
`;
